[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "webview"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.8.2", default-features = true, features = ["napi9"] }
napi-derive = "3.5.1"
tao         = { version = "0.34.5", features = ["rwh_06"] }
wry         = { version = "0.53.5", features = ["devtools", "fullscreen"] }
dpi         = "0.1"
serde_json  = "1"
image = "0.25.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd  = "0.15.4"
muda = { version = "0.17", features = ["libxdo"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
